syntax = "proto3";

package lunarclient.apollo.modules;

import "com/moonsworth/apollo/protocol/utility.proto";
import "google/protobuf/duration.proto";

option java_multiple_files = true;

// Modules

message BorderMessage {
  string id = 1;
  string world = 2;
  bool cancel_entry = 3;
  bool cancel_exit = 4;
  bool can_shrink_or_expand = 5;
  lunarclient.apollo.utility.Color color = 6;
  double min_x = 7;
  double min_z = 8;
  double max_x = 9;
  double max_z = 10;
  int32 duration_ticks = 11;
}

message CooldownMessage {
  string name = 1;
  int64 duration = 2;
  oneof icon {
    int32 item_id = 3;
    lunarclient.apollo.utility.RenderableIconMessage renderable_icon = 4;
  }
}

message HeartTextureMessage {
  enum Type {
    NONE = 0;
    ABSORPTION = 1;
    HEALING = 2;
    HEALING_AND_ABSORPTION = 3;
  }

  Type type = 1;
  int32 location_x = 2;
}

message ModSettingMessage {
  string mod_id = 1;
  bool enabled = 2;
  map<string, string> properties = 3;
}

message NametagMessage {
  lunarclient.apollo.utility.Uuid player_uuid = 1;
  bool hide = 2;
  repeated lunarclient.apollo.utility.RenderableStringMessage nametag = 3;
  int32 player_name_index = 4;
}

message NotificationMessage {
  string title = 1;
  string description = 2;
  string resource_location = 3;
}

message StaffModsMessage {
  enum Module {
    XRAY = 0;
  }

  repeated Module modules = 1;
}

message TeamMessage {
  message TeammateMessage {
    lunarclient.apollo.utility.Uuid player_uuid = 1;
    lunarclient.apollo.utility.Color color = 2;
    optional lunarclient.apollo.utility.LocationMessage location = 3;
  }

  string team_id = 1;
  repeated TeammateMessage members = 2;
}

message TitleMessage {
  enum Type {
    TITLE = 0;
    SUBTITLE = 1;
  }

  Type type = 1;
  string message = 2;
  float scale = 3;
  google.protobuf.Duration display_time = 4;
  google.protobuf.Duration fade_in_time = 5;
  google.protobuf.Duration fade_out_time = 6;
}

message WaypointMessage {
  string name = 1;
  lunarclient.apollo.utility.BlockLocationMessage location = 2;
  lunarclient.apollo.utility.Color color = 3;
  bool forced = 4;
  bool visible = 5;
}